# Dynamics

./: .gitignore  README.md  local_paths.example.json  pyproject.toml  requirements.txt  runs.json
configs/: example-run-001.json
mathematica/: Spinspincoupling_clean_executable.wl  Spinspincoupling_clean_readable.nb  Spinspincoupling_ncalgebra_paper_derivation.wl  Spinspincoupling_ncalgebra_paper_derivation_output.md  Spinspincoupling_ncalgebra_paper_derivation_output.txt  Spinspincoupling_symbolic_hybrid.wl  gate_guide.wl  gate_guide_pretty.nb  gate_guide_pretty_checked.nb  render_spinspincoupling_md.py  two_qubit_resonator_spin_basis_workflow.wl
python/: README.md
python/DQD/: __init__.py  circuit.py  pulse.py  setup.py  solver.py  system.py
python/dqd/: __init__.py  builders.py  circuit.py  setup.py  solver.py  system.py
python/hamiltonians/: __init__.py  pulses.py
python/hamiltonians/models/: __init__.py  single.py
python/helpers/: __init__.py  constants.py  gates.py  hamiltonian.py  operators.py  sequence.py  solver.py  system.py  viz.py
python/notebooks/: DQDdiagonalized.ipynb  DQDlabframe.ipynb  cnot_from_iswaps.ipynb  single_dqd_no_drive_spin_motion.py  single_dqd_phase_accumulation.ipynb  single_dqd_phase_accumulation.py  two_level_but_different.ipynb  two_qubit_bell_state_optimization.py  two_qubit_gate_with_resonator.ipynb
python/notebooks/dqd/: cnot_from_iswaps.ipynb
python/simulations/: __init__.py  single_dqd_phase_accumulation.py
references/published/: two_qubit_gate_with_resonator_workflow.md
(+2 files in other folders)
