[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamics-dqd"
version = "0.1.0"
description = "Dynamic simulations for double quantum dot gate models."
requires-python = ">=3.11"
dependencies = [
    "matplotlib==3.10.1",
    "numpy==2.2.5",
    "pandas==2.2.3",
    "qutip==5.1.1",
    "scipy==1.15.3",
]

[tool.setuptools.packages.find]
where = ["python"]
include = ["hamiltonians*", "dqd*"]
