[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamics-dqd"
version = "0.1.0"
description = "Dynamic simulations for double quantum dot gate models."
requires-python = ">=3.14"
dependencies = [
    "matplotlib==3.11.0",
    "numpy==2.5.0",
    "pandas==3.0.3",
    "ipywidgets==8.1.5",
    "qutip==5.3.0",
    "scipy==1.18.0",
]

[tool.setuptools.packages.find]
where = ["python"]
include = ["helpers*"]
